前台CSS、js、img引入成功

--- a/ThinkCheer/Application/Home/View/Article/list.html
+++ b/ThinkCheer/Application/Home/View/Article/list.html
@@ -6,15 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-     <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
+     <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <style>
     </style>
   </head>
@@ -35,7 +35,7 @@
   
   <a class="list_item js_post" href="wenxiang.html">
     <div class="cover">
-      <img class="img js_img" src="img/wenzhang1.jpg" alt="">
+      <img class="img js_img" src="__PUBLIC__/front/img/wenzhang1.jpg" alt="">
     </div>
     <div class="cont">
       <h2 class="title js_title">那年我在工地</h2>
@@ -45,7 +45,7 @@
   
   <a class="list_item js_post" href="wenxiang.html">
     <div class="cover">
-      <img class="img js_img" src="img/wenzhang2.jpg" alt="">
+      <img class="img js_img" src="__PUBLIC__/front/img/wenzhang2.jpg" alt="">
     </div>
     <div class="cont">
       <h2 class="title js_title">老四的爱情</h2>
@@ -56,7 +56,7 @@
   
   <a class="list_item js_post" href="wenxiang.html">
     <div class="cover">
-      <img class="img js_img" src="img/wenzhang3.jpg" alt="">
+      <img class="img js_img" src="__PUBLIC__/front/img/wenzhang3.jpg" alt="">
     </div>
     <div class="cont">
       <h2 class="title js_title">【故事】未曾发生的事</h2>
@@ -66,7 +66,7 @@
   
   <a class="list_item js_post" href="wenxiang.html">
     <div class="cover">
-      <img class="img js_img" src="img/wenzhang4.jpg" alt="">
+      <img class="img js_img" src="__PUBLIC__/front/img/wenzhang4.jpg" alt="">
     </div>
     <div class="cont">
       <h2 class="title js_title">【故事】未曾发生的事</h2>
@@ -76,7 +76,7 @@
   
   <a class="list_item js_post" href="wenxiang.html">
     <div class="cover">
-      <img class="img js_img" src="img/wenzhang5.jpg" alt="">
+      <img class="img js_img" src="__PUBLIC__/front/img/wenzhang5.jpg" alt="">
     </div>
     <div class="cont">
       <h2 class="title js_title">【小说】我要做主角！</h2>
