--- a/ThinkCheer/Application/Home/View/Commend/content.html
+++ b/ThinkCheer/Application/Home/View/Commend/content.html
@@ -8,12 +8,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/llh.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -39,7 +39,7 @@
 	        <div class="page-content hide-bars-on-scroll">
 	        	<a href="#" class="external">
               <!-- 封面图 -->
-	        		<div style="background:url(img/commend1.jpg) center no-repeat;background-size:cover;height:220px" valign="bottom" class="card-header color-white no-border">vol.3 微风徐来</div>
+	        		<div style="background:url(__PUBLIC__/front/img/commend1.jpg) center no-repeat;background-size:cover;height:220px" valign="bottom" class="card-header color-white no-border">vol.3 微风徐来</div>
 	        	</a>
             <h2 class="rich_media_title" id="activity-name" style="text-indent:1em;padding-top:4%">微风徐来 </h2>
             <!-- 标签、日期 -->
@@ -67,7 +67,7 @@
                   <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
                     <div class="col-5"></div>
                     <div class="col-20">
-                      <img src="img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
+                      <img src="__PUBLIC__/front/img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
                     </div>
                     <div class="col-50">
                       <h3 style="padding-top:2%">致姓名</h3>
@@ -83,7 +83,7 @@
                   <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
                     <div class="col-5"></div>
                     <div class="col-20">
-                      <img src="img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
+                      <img src="__PUBLIC__/front/img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
                     </div>
                     <div class="col-50">
                       <h3 style="padding-top:2%">致姓名</h3>
@@ -99,7 +99,7 @@
                   <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
                     <div class="col-5"></div>
                     <div class="col-20">
-                      <img src="img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
+                      <img src="__PUBLIC__/front/img/iup.jpg" width="100%" class="userImg" style="padding-top:12%">
                     </div>
                     <div class="col-50">
                       <h3 style="padding-top:2%">致姓名</h3>
@@ -141,9 +141,9 @@
 	 </div>
 	</div>
 	<!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>var myApp = new Framework7();            </script>
 </body>
 </html>
