--- a/ThinkCheer/Application/Home/View/Commend/list.html
+++ b/ThinkCheer/Application/Home/View/Commend/list.html
@@ -7,12 +7,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/llh.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -39,7 +39,7 @@
 		        	<li style="padding-top:6%">
 		        	  <a href="commendcontent.html" class="external">
 			        	  <div class="card demo-card-header-pic">
-			        		<div style="background:url(img/commend1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 3 微风徐来</div>
+			        		<div style="background:url(__PUBLIC__/front/img/commend1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 3 微风徐来</div>
 			        		<span class="color-gray" style="float:right;padding-top:2%">
 			        			发布时间：2018-03-26
 			        		</span>
@@ -49,7 +49,7 @@
 		        	<li style="padding-top:6%">
 		        	  <a href="commendcontent.html" class="external">
 			        	  <div class="card demo-card-header-pic">
-			        		<div style="background:url(img/commend2.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 2 看看周围的世界</div>
+			        		<div style="background:url(__PUBLIC__/front/img/commend2.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 2 看看周围的世界</div>
 			        		<span class="color-gray" style="float:right;padding-top:2%">
 			        			发布时间：2018-03-25
 			        		</span>
@@ -59,7 +59,7 @@
 		        	<li style="padding-top:6%">
 		        	  <a href="commendcontent.html" class="external">
 			        	  <div class="card demo-card-header-pic">
-			        		<div style="background:url(img/commend3.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 1 在清风驻留的街道</div>
+			        		<div style="background:url(__PUBLIC__/front/img/commend3.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 1 在清风驻留的街道</div>
 			        		<span class="color-gray" style="float:right;padding-top:2%">
 			        			发布时间：2018-03-24
 			        		</span>
@@ -69,7 +69,7 @@
 		        	<li style="padding-top:6%">
 		        	  <a href="commendcontent.html" class="external">
 			        	  <div class="card demo-card-header-pic">
-			        		<div style="background:url(img/commend3.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 1 在清风驻留的街道</div>
+			        		<div style="background:url(__PUBLIC__/front/img/commend3.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">vol. 1 在清风驻留的街道</div>
 			        		<span class="color-gray" style="float:right;padding-top:2%">
 			        			发布时间：2018-03-24
 			        		</span>
@@ -82,8 +82,8 @@
 	  </div>
 	</div>
 	<!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
 </body>
 </html>
