--- a/ThinkCheer/Application/Home/View/Community/index.html
+++ b/ThinkCheer/Application/Home/View/Community/index.html
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
     <style>
       .pop{
         display: none;
@@ -26,25 +26,25 @@
   <div class="pai">
    <div>
       <a href="fawen.html" class="external">
-        <img src="img/fa1.jpg" width="50%" />
+        <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
         <p>文章</p>
       </a>
     </div>
     <div>
       <a href="" class="external">
-        <img src="img/fa2.png" width="50%" />
+        <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
         <p>图片</p>
       </a>
     </div>
     <div>
       <a href="musicPublish.html" class="external">
-        <img src="img/fa1.jpg" width="50%" />
+        <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
         <p>音乐</p>
       </a>
     </div>
     <div>
       <a href="communityPublish.html" class="external">
-        <img src="img/fa2.png" width="50%" />
+        <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
         <p>动态</p>
       </a>
     </div>
@@ -102,7 +102,7 @@
 		                <div class="card-header">
 		                  <div class="fb">
 		                    <div class="facebook-avatar">
-		                      <img src="img/2.jpg" width="34" height="34">
+		                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 		                    </div>
 		                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 		                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -112,7 +112,7 @@
 		                <div class="card-content">
 		                  <div class="card-content-inner">
 		                    <p class="font16">What a nice photo i took yesterday!</p>
-		                    <img src="img/1.jpg" width="280" height="140">
+		                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 		                  </div>
 		                </div>
 		              <!-- </div>  -->
@@ -124,7 +124,7 @@
 		                <div class="card-header">
 		                  <div class="fb">
 		                    <div class="facebook-avatar">
-		                      <img src="img/2.jpg" width="34" height="34">
+		                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 		                    </div>
 		                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 		                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -134,7 +134,7 @@
 		                <div class="card-content">
 		                  <div class="card-content-inner">
 		                    <p class="font16">What a nice photo i took yesterday!</p>
-		                    <img src="img/1.jpg" width="280" height="140">
+		                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 		                  </div>
 		                </div>
 		              <!-- </div>  -->
@@ -148,7 +148,7 @@
 		            <ul>
 			            <li>
 				            <div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -170,7 +170,7 @@
 						</li>
 						<li>
 							<div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -192,7 +192,7 @@
 						</li>
 						<li>
 							<div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -221,13 +221,13 @@
 		            <div class="card facebook-card">
 					  <div class="card-header no-border">
 					  	<div class="fb">
-						    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+						    <div class="facebook-avatar"><img src="__PUBLIC__/front/img/2.jpg" width="34" height="34"></div>
 						    <div class="facebook-name">John Doe</div>
 						    <div class="facebook-date">Monday at 3:47 PM</div>
 					    </div>
 					    <a href="#" class="button followBtn" style="color:Tomato;border-color: #FF5722;">关注</a>
 					  </div>
-					  <div class="card-content"><img src="img/2.jpg" width="100%"></div>
+					  <div class="card-content"><img src="__PUBLIC__/front/img/2.jpg" width="100%"></div>
 					  <div class="card-footer no-border">
 					    <a href="#" class="link">
 		                   <i class="fas fa-share-square"></i>
@@ -247,7 +247,7 @@
 					<div class="card facebook-card">
 					  <div class="card-header">
 					    <div class="fb">
-						    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+						    <div class="facebook-avatar"><img src="__PUBLIC__/front/img/2.jpg" width="34" height="34"></div>
 						    <div class="facebook-name">John Doe</div>
 						    <div class="facebook-date">Monday at 3:47 PM</div>
 					    </div>
@@ -256,7 +256,7 @@
 					  <div class="card-content">
 					    <div class="card-content-inner">
 					      <p>What a nice photo i took yesterday!</p>
-					      <img src="img/2.jpg" width="100%">
+					      <img src="__PUBLIC__/front/img/2.jpg" width="100%">
 					      <p class="color-gray">Likes: 112    Comments: 43</p>
 					    </div>
 					  </div>
@@ -321,9 +321,9 @@
         })
     </script>
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>
 	    // 搜索弹出搜索框
 	    var myApp = new Framework7();            
