--- a/ThinkCheer/Application/Home/View/Index/index.html
+++ b/ThinkCheer/Application/Home/View/Index/index.html
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
     <style>
       .pop{
         display: none;
@@ -27,25 +27,25 @@
       <div class="pai">
        <div>
           <a href="fawen.html" class="external">
-            <img src="img/fa1.jpg" width="50%" />
+            <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
             <p>文章</p>
           </a>
         </div>
         <div>
           <a href="" class="external">
-            <img src="img/fa2.png" width="50%" />
+            <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
             <p>图片</p>
           </a>
         </div>
         <div>
           <a href="musicPublish.html" class="external">
-            <img src="img/fa1.jpg" width="50%" />
+            <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
             <p>音乐</p>
           </a>
         </div>
         <div>
           <a href="communityPublish.html" class="external">
-            <img src="img/fa2.png" width="50%" />
+            <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
             <p>动态</p>
           </a>
         </div>
@@ -86,17 +86,17 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <span>
-                      <img src="img/iu1.jpg" width="100%" class="imgW">
+                      <img src="__PUBLIC__/front/img/iu1.jpg" width="100%" class="imgW">
                     </span>
                   </div>
                   <div class="swiper-slide">
                     <span>
-                      <img src="img/1.jpg" width="100%" class="imgW">
+                      <img src="__PUBLIC__/front/img/1.jpg" width="100%" class="imgW">
                     </span>
                   </div>
                   <div class="swiper-slide">
                     <span>
-                      <img src="img/iu2.jpg" width="100%" class="imgW">
+                      <img src="__PUBLIC__/front/img/iu2.jpg" width="100%" class="imgW">
                     </span>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
                 <div class="card-header">
                   <div class="fb">
                     <div class="facebook-avatar">
-                      <img src="img/2.jpg" width="34" height="34">
+                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
                     </div>
                     <div class="facebook-name" style="font-size:16px">John Doe</div>
                     <div class="facebook-date">Monday at 2:15 PM</div>
@@ -118,7 +118,7 @@
                   <a href="musicContent.html" class="external">
                     <div class="card-content-inner">
                       <p class="font16" style="color:black">What a nice photo i took yesterday!</p>
-                      <img src="img/1.jpg" width="280" height="140">
+                      <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
                     </div>
                   </a>
                 </div>
@@ -143,7 +143,7 @@
                 <div class="card-header">
                   <div class="fb">
                     <div class="facebook-avatar">
-                      <img src="img/2.jpg" width="34" height="34">
+                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
                     </div>
                     <div class="facebook-name" style="font-size:16px">John Doe</div>
                     <div class="facebook-date">Monday at 2:15 PM</div>
@@ -154,7 +154,7 @@
                   <a href="musicContent.html" class="external">
                     <div class="card-content-inner">
                       <p class="font16 blackColor">What a nice photo i took yesterday!</p>
-                      <img src="img/1.jpg" width="280" height="140">
+                      <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
                     </div>
                   </a>
                 </div>
@@ -221,9 +221,9 @@
         })
     </script>
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>
       // 搜索弹出搜索框
       var myApp = new Framework7();            
