--- a/ThinkCheer/Application/Home/View/Me/fans.html
+++ b/ThinkCheer/Application/Home/View/Me/fans.html
@@ -7,11 +7,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -52,7 +52,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -66,7 +66,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -80,7 +80,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -94,7 +94,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -108,7 +108,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -122,7 +122,7 @@
                 <li class="swipeout">
                   <div class="swipeout-content item-content">
                     <div class="item-media">
-                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
                     </div>
                     <div class="item-inner">
                       这是一个用户名
@@ -142,9 +142,9 @@
 	</div>
 
 <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>var myApp = new Framework7();            </script>
 </body>
 </html>
