--- a/ThinkCheer/Application/Home/View/Me/index.html
+++ b/ThinkCheer/Application/Home/View/Me/index.html
@@ -7,13 +7,13 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/llh.css">
-  <script type="text/javascript" src="js/jquery.js"></script>
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+  <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
   <style>
     .pop{
       display: none;
@@ -26,25 +26,25 @@
     <div class="pai">
      <div>
         <a href="fawen.html" class="external">
-          <img src="img/fa1.jpg" width="50%" />
+          <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
           <p>文章</p>
         </a>
       </div>
       <div>
         <a href="" class="external">
-          <img src="img/fa2.png" width="50%" />
+          <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
           <p>图片</p>
         </a>
       </div>
       <div>
         <a href="musicPublish.html" class="external">
-          <img src="img/fa1.jpg" width="50%" />
+          <img src="__PUBLIC__/front/img/fa1.jpg" width="50%" />
           <p>音乐</p>
         </a>
       </div>
       <div>
         <a href="communityPublish.html" class="external">
-          <img src="img/fa2.png" width="50%" />
+          <img src="__PUBLIC__/front/img/fa2.png" width="50%" />
           <p>动态</p>
         </a>
       </div>
@@ -79,7 +79,7 @@
                     <li class="item-content row">
                     <div class="col-80">
                         <div class="item-media">
-                          <img src="img/2.jpg" width="80" height="80" style=" border-radius:50%">
+                          <img src="__PUBLIC__/front/img/2.jpg" width="80" height="80" style=" border-radius:50%">
                         </div>
                         <div class="item-inner">
                           <div class="item-title-row">
@@ -104,7 +104,7 @@
                 <div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
                   <div class="col-5"></div>
                   <div class="col-33">
-                    <img src="img/2.jpg" width="100%" style="border-radius:50%" id="userImg">
+                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" style="border-radius:50%" id="userImg">
                   </div>
                   <div class="col-50">
                      <div class="item-title-row">
@@ -240,7 +240,7 @@
                     <li>
                       <a href="#" class="item-link item-content">
                         <div class="item-media">
-                          <img src="img/2.jpg" width="80" height="80" style=" border-radius:50%">
+                          <img src="__PUBLIC__/front/img/2.jpg" width="80" height="80" style=" border-radius:50%">
                         </div>
                         <div class="item-inner">
                           <div class="item-title-row">
@@ -299,9 +299,9 @@
         })
     </script>
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         //实现用户头像正方形
