--- a/ThinkCheer/Application/Home/View/Me/published.html
+++ b/ThinkCheer/Application/Home/View/Me/published.html
@@ -7,11 +7,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
 </head>
 <body>
 	<!-- Status bar overlay for fullscreen mode-->
@@ -45,7 +45,7 @@
 				      <ul>
 					    <li>
 					      <a href="#" class="item-link item-content">
-					        <div class="item-media"><img src="img/1.jpg" width="50"></div>
+					        <div class="item-media"><img src="__PUBLIC__/front/img/1.jpg" width="50"></div>
 					        <div class="item-inner">
 					          <div class="item-title-row">
 					            <div class="item-title">标题</div>
@@ -61,7 +61,7 @@
 					    </li>
 					    <li>
 					      <a href="#" class="item-link item-content">
-					        <div class="item-media"><img src="img/1.jpg" width="50"></div>
+					        <div class="item-media"><img src="__PUBLIC__/front/img/1.jpg" width="50"></div>
 					        <div class="item-inner">
 					          <div class="item-title-row">
 					            <div class="item-title">标题</div>
@@ -86,7 +86,7 @@
 				      <ul>
 					    <li>
 					      <a href="#" class="item-link item-content">
-					        <div class="item-media"><img src="img/iu.jpg" width="50"></div>
+					        <div class="item-media"><img src="__PUBLIC__/front/img/iu.jpg" width="50"></div>
 					        <div class="item-inner">
 					          <div class="item-title-row">
 					            <div class="item-title">标题</div>
@@ -102,7 +102,7 @@
 					    </li>
 					    <li>
 					      <a href="#" class="item-link item-content">
-					        <div class="item-media"><img src="img/iu.jpg" width="50"></div>
+					        <div class="item-media"><img src="__PUBLIC__/front/img/iu.jpg" width="50"></div>
 					        <div class="item-inner">
 					          <div class="item-title-row">
 					            <div class="item-title">标题</div>
@@ -137,8 +137,8 @@
       </div>
     </div>
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
 </body>
 </html>
