--- a/ThinkCheer/Application/Home/View/Music/list.html
+++ b/ThinkCheer/Application/Home/View/Music/list.html
@@ -7,12 +7,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -39,7 +39,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-33">
-		                    <img src="img/2.jpg" width="100%" class="userImg">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg">
 		                  </div>
 		                  <div class="col-50">
 		                    <p>93年韩国女歌手IU的致姓名，打动人心</p>
@@ -54,7 +54,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-33">
-		                    <img src="img/2.jpg" width="100%" class="userImg">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg">
 		                  </div>
 		                  <div class="col-50">
 		                    <p>93年韩国女歌手IU的致姓名，打动人心</p>
@@ -69,7 +69,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-33">
-		                    <img src="img/2.jpg" width="100%" class="userImg">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg">
 		                  </div>
 		                  <div class="col-50">
 		                    <p>93年韩国女歌手IU的致姓名，打动人心</p>
@@ -84,7 +84,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-33">
-		                    <img src="img/2.jpg" width="100%" class="userImg">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg">
 		                  </div>
 		                  <div class="col-50">
 		                    <p>93年韩国女歌手IU的致姓名，打动人心</p>
@@ -103,9 +103,9 @@
     </div>
 
 <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
      <script type="text/javascript">
       $(document).ready(function(){
         //实现用户头像正方形
