--- a/ThinkCheer/Application/Home/View/Music/play.html
+++ b/ThinkCheer/Application/Home/View/Music/play.html
@@ -7,12 +7,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
-  <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+  <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
   <script type="text/javascript">
     $(document).ready(function(){
       //获取audio元素
@@ -135,7 +135,7 @@
 		        <div class="row" style="padding-top:16%">
 		        	<div class="col-10"></div>
 		        	<div class="col-80">
-		        		<img src="img/Adele.jpg" width="100%">
+		        		<img src="__PUBLIC__/front/img/Adele.jpg" width="100%">
 		        	</div>
 		        	<div class="col-10"></div>
 		        </div>
@@ -207,7 +207,7 @@
         <ul>
           <li>
             <a href="#" class="item-link item-content">
-              <div class="item-media"><img src="img/iu.jpg" width="44" height="44"></div>
+              <div class="item-media"><img src="__PUBLIC__/front/img/iu.jpg" width="44" height="44"></div>
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">致姓名</div>
@@ -218,7 +218,7 @@
           </li>
           <li>
             <a href="#" class="item-link item-content">
-              <div class="item-media"><img src="img/Adele.jpg" width="44" height="44"></div>
+              <div class="item-media"><img src="__PUBLIC__/front/img/Adele.jpg" width="44" height="44"></div>
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">Set Fire to the Rain</div>
@@ -229,7 +229,7 @@
           </li>
           <li>
             <a href="#" class="item-link item-content">
-              <div class="item-media"><img src="img/poster.jpg" width="44" height="44"></div>
+              <div class="item-media"><img src="__PUBLIC__/front/img/poster.jpg" width="44" height="44"></div>
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">小幸运</div>
@@ -240,7 +240,7 @@
           </li>
           <li>
             <a href="#" class="item-link item-content">
-              <div class="item-media"><img src="img/iu.jpg" width="44" height="44"></div>
+              <div class="item-media"><img src="__PUBLIC__/front/img/iu.jpg" width="44" height="44"></div>
               <div class="item-inner">
                 <div class="item-title-row">
                   <div class="item-title">歌名</div>
@@ -266,8 +266,8 @@
   </div>
   <!-- 音乐列表Picker end -->
 <!-- Path to Framework7 Library JS-->    
-  <script type="text/javascript" src="js/framework7.min.js"></script>
-  <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+  <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+  <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
   <script>var myApp = new Framework7();            </script>
 </body>
 </html>
