--- a/ThinkCheer/Application/Home/View/Picture/content.html
+++ b/ThinkCheer/Application/Home/View/Picture/content.html
@@ -6,15 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-     <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
+     <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <style>
     </style>
   </head>
@@ -54,11 +54,11 @@
                 </div>
                 
                 <div class="imglist">
-                    <img src="img/tu1.jpg" />
-                    <img src="img/tu2.jpg" />
-                    <img src="img/tu3.jpg" />
-                    <img src="img/tu4.jpg" />
-                    <img src="img/tu5.jpg" />
+                    <img src="__PUBLIC__/front/img/tu1.jpg" />
+                    <img src="__PUBLIC__/front/img/tu2.jpg" />
+                    <img src="__PUBLIC__/front/img/tu3.jpg" />
+                    <img src="__PUBLIC__/front/img/tu4.jpg" />
+                    <img src="__PUBLIC__/front/img/tu5.jpg" />
                 </div>
                 
                   <p style="text-indent: 28px; line-height: 1.75em;"><span style=";font-family:宋体;font-size:14px">&nbsp;</span></p><hr><p><br></p><p><br></p>          
