--- a/ThinkCheer/Application/Home/View/Article/content.html
+++ b/ThinkCheer/Application/Home/View/Article/content.html
@@ -6,15 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-     <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-     <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+     <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
+     <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <style>
     </style>
   </head>
@@ -54,7 +54,7 @@
                                                 
                                 <div class="rich_media_thumb_wrp" id="media">
                     
-                                       <img class="rich_media_thumb"  style="visibility: visible !important; height: auto !important;" src="img/wenzhang2.jpg">
+                                       <img class="rich_media_thumb"  style="visibility: visible !important; height: auto !important;" src="__PUBLIC__/front/img/wenzhang2.jpg">
                                     </div>
                                                 
                 
