--- a/ThinkCheer/Application/Home/View/Article/publish.html
+++ b/ThinkCheer/Application/Home/View/Article/publish.html
@@ -6,9 +6,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
     <style>
       .pop{
         display: none;
@@ -24,7 +24,7 @@
       <div class="clear"></div>
        <div>
          <form class="form">
-           <p><a href=""><img src="img/feng.jpg"></a></p>
+           <p><a href=""><img src="__PUBLIC__/front/img/feng.jpg"></a></p>
            <input type="text" placeholder="请输入标题" value=""  class="title" />
            <textarea rows="5" cols="20" placeholder="请输入正文" class="con"></textarea>
          </form>
