--- a/ThinkCheer/Application/Home/View/Me/collection.html
+++ b/ThinkCheer/Application/Home/View/Me/collection.html
@@ -7,12 +7,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/llh.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
 </head>
 <body class="theme-red">
 <!-- Status bar overlay for fullscreen mode-->
@@ -54,7 +54,7 @@
 	                <ul>
 			            <li>
 				            <div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -76,7 +76,7 @@
 						</li>
 						<li>
 							<div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -98,7 +98,7 @@
 						</li>
 						<li>
 							<div class="card demo-card-header-pic">
-							  <div style="background:url(img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
+							  <div style="background:url(__PUBLIC__/front/img/1.jpg) center no-repeat;background-size:cover;height:160px" valign="bottom" class="card-header color-white no-border">Journey To Mountains</div>
 							  <div class="card-content">
 							    <div class="card-content-inner">
 							      <p class="color-gray">Posted on January 21, 2015</p>
@@ -128,11 +128,11 @@
 	                	<li>
 	                		<div class="card facebook-card">
 							  <div class="card-header no-border">
-							    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+							    <div class="facebook-avatar"><img src="__PUBLIC__/front/img/2.jpg" width="34" height="34"></div>
 							    <div class="facebook-name">John Doe</div>
 							    <div class="facebook-date">Monday at 3:47 PM</div>
 							  </div>
-							  <div class="card-content"><img src="img/2.jpg" width="100%"></div>
+							  <div class="card-content"><img src="__PUBLIC__/front/img/2.jpg" width="100%"></div>
 							  <div class="card-footer no-border">
 							    <a href="#" class="link">
 				                   <i class="fas fa-share-square"></i>
@@ -152,11 +152,11 @@
 	                	<li>
 	                		<div class="card facebook-card">
 							  <div class="card-header no-border">
-							    <div class="facebook-avatar"><img src="img/2.jpg" width="34" height="34"></div>
+							    <div class="facebook-avatar"><img src="__PUBLIC__/front/img/2.jpg" width="34" height="34"></div>
 							    <div class="facebook-name">John Doe</div>
 							    <div class="facebook-date">Monday at 3:47 PM</div>
 							  </div>
-							  <div class="card-content"><img src="img/2.jpg" width="100%"></div>
+							  <div class="card-content"><img src="__PUBLIC__/front/img/2.jpg" width="100%"></div>
 							  <div class="card-footer no-border">
 							    <a href="#" class="link">
 				                   <i class="fas fa-share-square"></i>
@@ -184,7 +184,7 @@
 				                <div class="card-header">
 				                  <div class="fb">
 				                    <div class="facebook-avatar">
-				                      <img src="img/2.jpg" width="34" height="34">
+				                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 				                    </div>
 				                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 				                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -194,7 +194,7 @@
 				                <div class="card-content">
 				                  <div class="card-content-inner">
 				                    <p class="font16">What a nice photo i took yesterday!</p>
-				                    <img src="img/1.jpg" width="280" height="140">
+				                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 				                  </div>
 				                </div>
 				                <div class="card-footer">
@@ -218,7 +218,7 @@
 				                <div class="card-header">
 				                  <div class="fb">
 				                    <div class="facebook-avatar">
-				                      <img src="img/2.jpg" width="34" height="34">
+				                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 				                    </div>
 				                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 				                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -228,7 +228,7 @@
 				                <div class="card-content">
 				                  <div class="card-content-inner">
 				                    <p class="font16">What a nice photo i took yesterday!</p>
-				                    <img src="img/1.jpg" width="280" height="140">
+				                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 				                  </div>
 				                </div>
 				                <div class="card-footer">
@@ -255,7 +255,7 @@
 		            <ul>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/iup.jpg" width="44" height="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/iup.jpg" width="44" height="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">致姓名</div>
@@ -266,7 +266,7 @@
 			          </li>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/Adele.jpg" width="44" height="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/Adele.jpg" width="44" height="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">Set Fire to the Rain</div>
@@ -277,7 +277,7 @@
 			          </li>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/poster.jpg" width="44" height="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/poster.jpg" width="44" height="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">小幸运</div>
@@ -288,7 +288,7 @@
 			          </li>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/Adele1.jpg" width="44" height="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/Adele1.jpg" width="44" height="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">All I Ask</div>
@@ -299,7 +299,7 @@
 			          </li>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/Adelesome.jpg" width="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/Adelesome.jpg" width="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">Someone Like You</div>
@@ -310,7 +310,7 @@
 			          </li>
 			          <li>
 			            <a href="#" class="item-link item-content">
-			              <div class="item-media"><img src="img/iuf.jpg" width="44" height="44"></div>
+			              <div class="item-media"><img src="__PUBLIC__/front/img/iuf.jpg" width="44" height="44"></div>
 			              <div class="item-inner">
 			                <div class="item-title-row">
 			                  <div class="item-title">无法入睡的夜晚</div>
@@ -330,7 +330,7 @@
 				                <div class="card-header">
 				                  <div class="fb">
 				                    <div class="facebook-avatar">
-				                      <img src="img/2.jpg" width="34" height="34">
+				                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 				                    </div>
 				                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 				                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -340,7 +340,7 @@
 				                <div class="card-content">
 				                  <div class="card-content-inner">
 				                    <p class="font16">What a nice photo i took yesterday!</p>
-				                    <img src="img/1.jpg" width="280" height="140">
+				                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 				                  </div>
 				                </div>
 				                <!-- 音乐部分 -->
@@ -350,7 +350,7 @@
 									  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
 						                  <div class="col-5"></div>
 						                  <div class="col-20">
-						                    <img src="img/Adele.jpg" width="100%" class="userImg" style="padding-top:12%">
+						                    <img src="__PUBLIC__/front/img/Adele.jpg" width="100%" class="userImg" style="padding-top:12%">
 						                  </div>
 						                  <div class="col-50">
 						                    <h3 style="padding-top:2%">Someone Like You</h3>
@@ -389,7 +389,7 @@
 				                <div class="card-header">
 				                  <div class="fb">
 				                    <div class="facebook-avatar">
-				                      <img src="img/2.jpg" width="34" height="34">
+				                      <img src="__PUBLIC__/front/img/2.jpg" width="34" height="34">
 				                    </div>
 				                    <div class="facebook-name" style="font-size:16px">John Doe</div>
 				                    <div class="facebook-date">Monday at 2:15 PM</div>
@@ -399,7 +399,7 @@
 				                <div class="card-content">
 				                  <div class="card-content-inner">
 				                    <p class="font16">What a nice photo i took yesterday!</p>
-				                    <img src="img/1.jpg" width="280" height="140">
+				                    <img src="__PUBLIC__/front/img/1.jpg" width="280" height="140">
 
 				                  </div>
 				                </div>
@@ -410,7 +410,7 @@
 									  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
 						                  <div class="col-5"></div>
 						                  <div class="col-20">
-						                    <img src="img/Adele.jpg" width="100%" class="userImg" style="padding-top:12%">
+						                    <img src="__PUBLIC__/front/img/Adele.jpg" width="100%" class="userImg" style="padding-top:12%">
 						                  </div>
 						                  <div class="col-50">
 						                    <h3 style="padding-top:2%">Someone Like You</h3>
@@ -455,9 +455,9 @@
 	</div>
 
 	<!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>var myApp = new Framework7();            </script>
 </body>
 </body>
