--- a/ThinkCheer/Application/Home/View/Me/follow.html
+++ b/ThinkCheer/Application/Home/View/Me/follow.html
@@ -7,11 +7,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>My App</title>
   <!-- Path to Framework7 Library CSS-->
-  <link rel="stylesheet" href="css/framework7.ios.min.css">
-  <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-  <link rel="stylesheet" href="css/fa-svg-with-js.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
   <!-- Path to your custom app styles-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -52,7 +52,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -65,7 +65,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -78,7 +78,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -91,7 +91,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -104,7 +104,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -117,7 +117,7 @@
 	                <li class="swipeout">
 	                  <div class="swipeout-content item-content">
 	                    <div class="item-media">
-	                      <img src="img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
+	                      <img src="__PUBLIC__/front/img/iu23.jpg" width="44" style="border-radius:50%" class="userImg">
 	                    </div>
 	                    <div class="item-inner">
 	                      这是一个用户名
@@ -136,9 +136,9 @@
 	</div>
 
 <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <script>var myApp = new Framework7();            </script>
 </body>
 </html>
