--- a/ThinkCheer/Application/Home/View/Music/content.html
+++ b/ThinkCheer/Application/Home/View/Music/content.html
@@ -7,12 +7,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
 </head>
 <body>
 <!-- Status bar overlay for fullscreen mode-->
@@ -38,7 +38,7 @@
 	        	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px">
                   <div class="col-5"></div>
                   <div class="col-20">
-                    <img src="img/2.jpg" width="90%" style="border-radius:50%" class="userImg">
+                    <img src="__PUBLIC__/front/img/2.jpg" width="90%" style="border-radius:50%" class="userImg">
                   </div>
                   <div class="col-50">
                      <div class="item-title-row" style="padding-top:5%">
@@ -53,7 +53,7 @@
                 <!-- 标题图 -->
                 <div>
                 	<!-- banner图           -->
-            		<a href=""><img width="100%" src="img/1.jpg"/></a>
+            		<a href=""><img width="100%" src="__PUBLIC__/front/img/1.jpg"/></a>
                 </div>
                 <!-- 正文 -->
                 <!-- Add ".content-block-title" to add block's title -->
@@ -70,7 +70,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-20">
-		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
 		                  </div>
 		                  <div class="col-50">
 		                    <h3 style="padding-top:2%">致姓名</h3>
@@ -86,7 +86,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-20">
-		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
 		                  </div>
 		                  <div class="col-50">
 		                    <h3 style="padding-top:2%">致姓名</h3>
@@ -102,7 +102,7 @@
 					  	<div class="row list-block media-list" style="border-bottom-style:solid;border-width:thin;border-color: #E0E0E0;margin-bottom:1px;margin-top:1px">
 		                  <div class="col-5"></div>
 		                  <div class="col-20">
-		                    <img src="img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
+		                    <img src="__PUBLIC__/front/img/2.jpg" width="100%" class="userImg" style="padding-top:12%">
 		                  </div>
 		                  <div class="col-50">
 		                    <h3 style="padding-top:2%">致姓名</h3>
@@ -139,7 +139,7 @@
 							<!-- 头像用户名 -->
 							<div class="row" style="padding-top:6%">
 								<div class="col-20">
-									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+									<img src="__PUBLIC__/front/img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
 								</div>
 								<div class="col-50 font16" style="padding-top:2%">MMM</div>
 								<div class="col-20"></div>
@@ -171,7 +171,7 @@
 							<!-- 头像用户名 -->
 							<div class="row" style="padding-top:6%">
 								<div class="col-20">
-									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+									<img src="__PUBLIC__/front/img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
 								</div>
 								<div class="col-50 font16" style="padding-top:2%">名字名字</div>
 								<div class="col-20"></div>
@@ -203,7 +203,7 @@
 							<!-- 头像用户名 -->
 							<div class="row" style="padding-top:6%">
 								<div class="col-20">
-									<img src="img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
+									<img src="__PUBLIC__/front/img/2.jpg" width="100%" style="border-radius:50%" class="userImg"/>
 								</div>
 								<div class="col-50 font16" style="padding-top:2%">紫馨</div>
 								<div class="col-20"></div>
@@ -243,9 +243,9 @@
     </div>
 
 <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
      <script type="text/javascript">
       $(document).ready(function(){
         //实现用户头像正方形
