--- a/ThinkCheer/Application/Home/View/Picture/list.html
+++ b/ThinkCheer/Application/Home/View/Picture/list.html
@@ -6,15 +6,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>My App</title>
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="css/fa-svg-with-js.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/llh.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery-2.2.2.js"></script>
-    <script type="text/javascript" src="js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/fontawesome-all.min.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/fa-svg-with-js.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/style.css">
+    <link rel="stylesheet" href="__PUBLIC__/front/css/llh.css">
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/jquery-2.2.2.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/framework7.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/front/js/fontawesome-all.min.js"></script>
     <style>
     </style>
   </head>
